# ha-ffmpeg

./: .gitignore  .travis.yml  README.md  README.rst  azure-pipelines.yml  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: pythonpublish.yml  test.yml
haffmpeg/: __init__.py  camera.py  core.py  sensor.py  tools.py
test/: camera_mjpeg.py  core_version.py  sensor_max_volume.py  sensor_mean_volume.py  sensor_motion.py  sensor_noise.py  sensor_volume.py  tools_imageframe.py  tools_imagesingle.py  tools_imagestream.py  tools_test.py  tools_version.py
